# NeuralNetwork

./: CMakeLists.txt  literal.hpp  main.cpp  main_kmeans.cpp  main_linear.cpp  main_minmax.cpp  preliminary.hpp
common/: cite.hpp  citeBoost.hpp  citeSTL.hpp
common/utility/: material.hpp  pool.hpp
dataset/: x_test_10.csv  x_test_11.csv  x_test_12.csv  x_test_13.csv  x_test_14.csv  x_test_15.csv  x_test_16.csv  x_test_17.csv  x_test_18.csv  x_test_19.csv  x_test_2.csv  x_test_20.csv  x_test_21.csv  x_test_22.csv  x_test_23.csv  x_test_24.csv  x_test_25.csv  x_test_26.csv  x_test_27.csv  x_test_28.csv  x_test_29.csv  x_test_3.csv  x_test_30.csv  x_test_31.csv  x_test_32.csv  x_test_33.csv  x_test_34.csv  x_test_35.csv  x_test_36.csv  x_test_37.csv  x_test_38.csv  x_test_39.csv  x_test_4.csv  x_test_40.csv  x_test_41.csv  x_test_42.csv  x_test_43.csv  x_test_44.csv  x_test_45.csv  x_test_5.csv  (+7 more)
dataset/predict/: confusion_kmeans.txt  confusion_linear.txt  confusion_minmax.txt  create_matrix.cpp
liblinear/: -n  heart_scale.model  result
